Bug fix on instance move and class tree panel z-index

--- a/linda/linda_app/static/css/style.css
+++ b/linda/linda_app/static/css/style.css
@@ -1942,7 +1942,7 @@ input, textarea {
     right: 0;
     max-width: 300px;
     top: 120px;
-    z-index: 10;
+    z-index: 99999;
     background: #fff;
     border-left: 1px solid #eee;
 }
